<?xml version="1.0"?>
<package format="2">
  <name>cslibs_kdl</name>
  <version>0.0.0</version>
  <description>The cslibs_kdl package is manily a wrapper for KDL. For inverse kinematics trac_ik is used. Besides, a external torque observer is provided</description>

  <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>cslibs_kdl_data</build_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>trac_ik_lib</build_export_depend>
  <build_export_depend>cslibs_kdl_data</build_export_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>trac_ik_lib</exec_depend>
  <exec_depend>cslibs_kdl_data</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
