<?xml version="1.0"?>
<package format="2">
  <name>cslibs_kdl_conversion</name>
  <version>0.0.0</version>
  <description>The cslibs_kdl_conversion package</description>

 <maintainer email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</maintainer>
 <author email="adrian.zwiener@uni-tuebingen.de">Adrian Zwiener</author>

<license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cslibs_kdl_data</build_depend>
  <build_depend>cslibs_kdl_msgs</build_depend>
  <build_export_depend>cslibs_kdl_data</build_export_depend>
  <build_export_depend>cslibs_kdl_msgs</build_export_depend>
  <exec_depend>cslibs_kdl_data</exec_depend>
  <exec_depend>cslibs_kdl_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
